--- a/invitroTKstats/vignettes/Caco2_vignette.Rmd
+++ b/invitroTKstats/vignettes/Caco2_vignette.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Caco-2"
+title: "Apparent Membrane Permeability (Caco-2)"
 author: "US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov"
 output:
   rmdformats::readthedown:
     fig_retina: false
-    toc_depth: 3
+    toc_depth: 4
 bibliography: '`r system.file("REFERENCES.bib", package="invitroTKstats")`'
 params:
   my_css: css/rmdformats.css
