--- a/invitroTKstats/vignettes/plotting-invitroTKstats.Rmd
+++ b/invitroTKstats/vignettes/plotting-invitroTKstats.Rmd
@@ -1,17 +1,27 @@
 ---
 title: "Plotting Functions"
-output: rmarkdown::html_vignette
+author: "US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov"
+output:
+  rmdformats::readthedown:
+    fig_retina: false
+    toc_depth: 4
 bibliography: '`r system.file("REFERENCES.bib", package="invitroTKstats")`'
+params:
+  my_css: css/rmdformats.css
 vignette: >
   %\VignetteIndexEntry{Plotting Functions}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
+```{css, code = readLines(params$my_css), hide=TRUE, echo = FALSE}
+```
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.align = 'center'
 )
 ```
 
