--- a/README.Rmd
+++ b/README.Rmd
@@ -22,9 +22,11 @@ knitr::opts_chunk$set(
 
 <a href="https://github.com/USEPA/invitroTKstats.git"><img src="vignettes/img/invitroTKstats_hex.png" width="200" align="right" /></a>
 
-The `invitroTKstats` R package contains functions to run standardized data pipeline for processing high-throughput toxicokinetic (HTTK) mass-spectrometry data obtained from a variety *in vitro* assays. The pipeline includes standardization for data documentation, statistical analyses predicting toxicokinetic parameters characterizing absorption, distribution, metabolism, and elimination of chemicals by the body.
+The `invitroTKstats` R package contains functions to run a standardized data pipeline for processing high-throughput toxicokinetic (HTTK) mass-spectrometry data obtained from a variety of *in vitro* assays. The pipeline includes standardization for data documentation, statistical analyses predicting toxicokinetic parameters characterizing absorption, distribution, metabolism, and elimination of chemicals by the body.
 
 The assays covered by the pipeline include intrinsic clearance after hepatocyte incubation ($Cl_{int}$); two variants of plasma protein binding experiments ($f_{up}$) -- namely Rapid Equilibrium Dialysis (RED) and Ultracentrifugation (UC), CACO-2 membrane permeability, and blood to plasma concentration ratio. Analysis methods include a frequentist point estimation and, in some cases, Bayesian estimations for the distribution of likely parameter values. Data used to derive the estimates are based on mass spectrometry ratios of analyte peak areas to internal standard (ISTD) peak areas.
+
+If you are interested in contributing or want to report a bug, please submit an issue or start a discussion.
 
 ### Dependencies
 
@@ -60,7 +62,7 @@ devtools::install_local(
 )
 ```
 
-* Installation a tarball version of the package:
+* Installing a tarball version of the package:
 
   1. Save the tarball file "invitroTKstats_X.Y.Z.tar.gz" to a local directory location.
   2. Install the package via the RStudio provided 'Install Packages' menu under the 'Tools' tab, or using the command line terminal with the following:
@@ -73,7 +75,7 @@ R CMD INSTALL <file_path_to_invitroTKstats_tarball>/invitroTKstats_X.Y.Z.tar.gz
 
 ### Loading the Package
 
-To load the `invitroTKstats` data R package into your local R session via the R console:
+To load the `invitroTKstats` R package into your local R session via the R console:
 
 ```r
 library(invitroTKstats)
@@ -91,7 +93,7 @@ packageVersion(invitroTKstats)
 * Sarah E. Davidson-Fritz (Conceptualization & Lead Package Developer)
 * Lindsay Knupp (Software Development)
 * Barbara A. Wetmore (Raw Data Generation & Subject Matter Expert)
-* Nicolas Chantel (Inital Bayesian Model Development)
+* Nicolas Chantel (Initial Bayesian Model Development for $f_{up}$ RED assay)
 * Zhihui Zhao (Software Development)
 * Anna Kreutz (Raw Data Generation & Subject Matter Expert)
 
